--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "rollup": "^3.21.6",
     "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-tailwindcss": "^1.0.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
