--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My reusable react components",
   "author": "Michael Tagg",
   "name": "@mdtagg/my_reuseable_components",
@@ -18,13 +18,20 @@
     "react": "^18.2.0",
     "rollup": "^3.21.6",
     "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-tailwindcss": "^1.0.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "react":"18.2.0"
   },
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "rollup-plugin-peer-deps-external": "^2.2.4"
+  }
 }
